force-app/main/default/objects/Occupant__c/Occupant__c.object-meta.xml
<CustomObject>
    <label>Occupant</label>
    <nameField>
        <label>Occupant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occupants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>