force-app/main/default/objects/Occupant__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>Applicant</label>
    <referenceTo>Rental_Application__c</referenceTo>
    <relationshipLabel>Occupants</relationshipLabel>
    <relationshipName>Occupants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>