force-app/main/default/objects/Occupant__c/fields/Related_Application__c.field-meta.xml
<CustomField>
    <fullName>Related_Application__c</fullName>
    <label>Related Application</label>
    <referenceTo>Rental_Application__c</referenceTo>
    <relationshipLabel>Occupants</relationshipLabel>
    <relationshipName>Occupants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>