force-app/main/default/objects/Occupant__c/fields/Related_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Related_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Tenant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Tenat does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filterItems>
        <infoMessage>Please select this tenant related to this occupant.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Occupants</relationshipLabel>
    <relationshipName>Occupants</relationshipName>
    <type>Lookup</type>
</CustomField>