force-app/main/default/objects/Occupant__c/fields/Relationship_to_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Tenant__c</fullName>
    <label>Relationship to Tenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Significant Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>